data/all_generated_tests/raw_wast_tests/nop_InfiniteLoops_300.wast
;; 1. **Test for Infinite Loop with Single Nop Instruction**:    - Construct a loop that contains a single `nop` instruction. The test will check whether the `resetSig` method in `wizard_engine` initializes and validates the loop context correctly without infinite looping.    - Constraint: Loop should not enter an infinite state because `nop` does not affect the loop's break conditions or stack state.

(assert_invalid
  (module
    (func (loop (nop) (br 0)))
  )
  "unexpected end of input"
)